css/index.css
/* ... */
h4.catbg, h4.catbg2 , h3.catbg , h3.catbg2 , .table_list tbody.header td.catbg
{
	background: var(--red);
	padding: 0 5px;
	text-shadow: -1px -1px 1px rgba(0,0,0,0.2);
	box-shadow: 0 1px 0 rgba(255,255,255,0.3) inset;
}
h4.titlebg, h3.titlebg
{
	background-color: #dcdcdc;
}
h4.titlebg img.icon
{
	float: left;
	margin: 12px 8px 0 0;
}
div.cat_bar
{
	background: var(--red);
	padding: 0 5px;
	border-radius: 4px 4px 0 0;
	box-shadow: 0 1px 0 rgba(255,255,255,0.3) inset;
	border: 1px inset rgba(0,0,0,0.2);
	text-shadow: -1px -1px 1px rgba(0,0,0,0.2);
	box-sizing: border-box;
	margin-bottom: 1px;
}
div.title_bar
{
	background-color: #dcdcdc;
	padding: 0 9px;
	height: 40px;
	overflow: hidden;
	margin-bottom: 1px;
	border-radius: 3px;
	border: 1px solid rgba(150,150,150,0.2);
}

/* rounded bars needs a different background here */
div.title_barIC
{
	background-color: #dcdcdc;
	padding: 0 9px;
	height: 40px;
	overflow: hidden;
	margin-bottom: 1px;
	border-radius: 3px;
	border: 1px solid rgba(150,150,150,0.2);
}
div.title_barIC h4.titlebg
{
	background-color: #dcdcdc;
}
#upshrinkHeaderIC p.pminfo
{
	margin: 0;
	padding: 0.5em;
}
img#upshrink_ic, img#newsupshrink
{
	float: right;
	margin: 12px 5px 0 0;
}
a.unreadlink, a.collapse
{
	float: right;
}
table.table_list a.collapse
{
	margin: 10px 5px 0 1em;
	height: 31px;
	line-height: 31px;
}

/* The half-round header bars for some tables. */
.table_grid tr.catbg, .table_grid tr.titlebg
{
	font-size: 0.95em;
	border-bottom: 1px solid #ccc;
}
.table_grid tr.catbg th, .table_grid tr.titlebg th
{
	height: 28px;
	line-height: 28px;
}
tr.catbg th.first_th
{
	background: var(--red);
	padding: 0 5px;
	text-shadow: -1px -1px 1px rgba(0,0,0,0.2);
}
tr.catbg th.last_th
{
	background: var(--red);
	padding: 0 5px;
	text-shadow: -1px -1px 1px rgba(0,0,0,0.2);
}
tr.titlebg th.first_th
{
	background-color: #dcdcdc;
}
tr.titlebg th.last_th
{
	background-color: #ccc;
}
.table_grid th.last_th input
{
	margin: 0 2px;
}
.table_grid th.lefttext
{
	padding: 0 0.7em;
}

/* a general table class */
table.table_grid
{
	border-collapse: collapse;
	margin-top: 0.1em;
}
table.table_grid td
{
	padding: 3px;
	border-bottom: 1px solid var(--off-white);
	border-right: 1px solid var(--off-white);
}

/* GenericList */
.additional_row
{
	padding: 0.5em 0 0.5em 0;
}
table.table_grid thead tr.catbg th
{
	white-space: nowrap;
}

/* table_grid styles for Profile > Show Permissions. */
#permissions table.table_grid  td
{
	padding: 0.4em 0.8em;
	cursor: default;
} 

/* Common styles used to add corners to divisions.
------------------------------------------------------- */
.windowbg span.topslice
{
	display: block;
	padding-left: 20px;
	background: #f7f2f2;
	border-radius: 5px 5px 0 0;
}
.windowbg span.topslice span
{
	display: block;
	height: 11px;
	border-radius: 5px 5px 0 0;
}
.windowbg span.botslice
{
	display: block;
	padding-left: 20px;
	font-size: 5px;
	line-height: 5px;
	margin-bottom: 0.2em;
}
.windowbg span.botslice span
{
	display: block;
	height: 11px;
}

.windowbg2 span.topslice
{
	display: block;
	padding-left: 20px;
}
.windowbg2 span.topslice span
{
	display: block;
	height: 11px;
}
.windowbg2 span.botslice
{
	display: block;
	padding-left: 20px;
	font-size: 5px;
	line-height: 5px;
	margin-bottom: 0.2em;
}
.windowbg2 span.botslice span
{
	display: block;
	height: 11px;
}
.approvebg span.topslice
{
	display: block;
	padding-left: 20px;
	background: url(../images/theme/main_block.png) 0 0 no-repeat;
}
.approvebg span.topslice span
{
	display: block;
	background: url(../images/theme/main_block.png) 100% 0 no-repeat;
	height: 11px;
}
.approvebg span.botslice
{
	display: block;
	padding-left: 20px;
	background: url(../images/theme/main_block.png) 0 -11px no-repeat;
	margin-bottom: 0.2em;
}
.approvebg span.botslice span
{
	display: block;
	background: url(../images/theme/main_block.png) 100% -11px no-repeat;
	height: 11px;
}
.postbg
{
	border-left: 1px solid #7f7f7f;
	border-right: 1px solid #7f7f7f;
}

/* Used for sections that need somewhat larger corners.
----------------------------------------------------------- */
.roundframe
{
	box-sizing: border-box;
	margin: 5px 0 0 0;
	padding: 20px 15px;
	background: #fdf9f9;
	border: 1px solid #c5c5c5;
	border-radius: 7px;
	box-shadow: 0 -2px 2px rgba(0,0,0,0.1);
}
.roundframe dl, .roundframe dt, .roundframe p
{
	margin: 0;
}
.roundframe p
{
	padding: 0.5em;
}
span.upperframe
{
	padding: 0;
	display: block;
	padding-left: 20px;
}
span.upperframe span
{
	padding: 0;
	height: 1px;
	display: block;
}
span.lowerframe
{
	padding: 0;
	display: block;
	padding-left: 20px;
}
span.lowerframe span
{
	padding: 0;
	height: 1px;
	display: block;
}

/* The main content area.
------------------------------------------------------- */
.content
{
	padding: 0.5em 1.2em;
	margin: 0;
	border: none;
}
.content p
{
	margin: 0 0 0.5em 0;
}

/* Styles used by the auto suggest control.
------------------------------------------------------- */
.auto_suggest_div
{
	border: 1px solid #000;
	position: absolute;
	visibility: hidden;
}
.auto_suggest_item
{
	background-color: #ddd;
}
.auto_suggest_item_hover
{
	background-color: #888;
	cursor: pointer;
	color: #eee;
}

/* Styles for the standard dropdown menus.
------------------------------------------------------- */
#main_menu
{
	padding: 0 0.5em;
	float: left;
	margin: 0;
	width: 98%;
}

.dropmenu, .dropmenu ul
{
	list-style: none;
	line-height: 1em;
	padding: 0;
	margin: 0;
}
.dropmenu
{
	padding: 0 0.5em;
}
.dropmenu a
{
	display: block;
	color: #000;
	text-decoration: none;
}
.dropmenu a span
{
	display: block;
	padding: 0 0 0 5px;
	font-size: 0.9em;
}
/* the background's first level only */
.dropmenu li a.firstlevel
{
	margin-right: 8px;
}
.dropmenu li a.firstlevel span.firstlevel
{
	display: block;
	position: relative;
	left: -5px;
	padding-left: 5px;
	height: 22px;
	line-height: 19px;
	white-space: pre;
}
.dropmenu li
{
	float: left;
	padding: 0;
	margin: 0;
	position: relative;
}
/* ... */

